[tool.poetry]
name = "healthkg"
version = "0.1.0"
description = "Health Knowledge Graph"
authors = ["Benjamin Chu <bensabenteuer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1, < 3.9.7"
neo4j = "4.4.2"
configparser = "^5.3.0"
streamlit = "^1.13.0"
pandas = "^1.3.5"
numpy = "^1.21.6"
scispacy = "^0.5.1"
en_core_sci_lg = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.1/en_core_sci_lg-0.5.1.tar.gz" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
